--- a/package.json
+++ b/package.json
@@ -26,8 +26,12 @@
     "mongoose": "^8.5.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.10.2",
+    "node-cron": "^3.0.3",
+    "nodemailer": "^6.9.14",
     "nodemon": "^3.1.4",
+    "socket.io": "^4.7.5",
     "supertest": "^7.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.13.1"
   }
 }
